--- a/bin/control
+++ b/bin/control
@@ -73,7 +73,7 @@ function status() {
 function build() {
   cd "$OPENSHIFT_REPO_DIR"
   echo "building $OPENSHIFT_APP_NAME"
-  yes | elixir -S mix deps.get deps.compile
+  (yes | elixir -S mix cowboy.init) || echo "ignore the error, it is makeshift workaround to compile dependencies"
   echo "building $OPENSHIFT_APP_NAME finished"
 }
 
